implementing process inquiry

--- a/libags_audio.sym.in
+++ b/libags_audio.sym.in
@@ -1320,6 +1320,9 @@ ags_midi_ci_1_1_port_inquiry
 ags_midi_ci_1_1_port_respond
 ags_midi_ci_1_1_port_new
 ags_midi_util_get_type
+ags_midi_util_alloc
+ags_midi_util_free
+ags_midi_util_copy
 ags_midi_util_is_key_on
 ags_midi_util_is_key_off
 ags_midi_util_is_key_pressure
@@ -1541,6 +1544,8 @@ ags_midi_ci_util_put_subscription
 ags_midi_ci_util_get_subscription
 ags_midi_ci_util_put_subscription_reply
 ags_midi_ci_util_get_subscription_reply
+ags_midi_ci_util_put_process_capabilities
+ags_midi_ci_util_get_process_capabilities
 ags_midi_file_get_type
 ags_midi_file_error_quark
 ags_midi_file_open
