--- a/libags_audio.sym.in
+++ b/libags_audio.sym.in
@@ -1546,6 +1546,10 @@ ags_midi_ci_util_put_subscription_reply
 ags_midi_ci_util_get_subscription_reply
 ags_midi_ci_util_put_process_capabilities
 ags_midi_ci_util_get_process_capabilities
+ags_midi_ci_util_put_process_capabilities_reply
+ags_midi_ci_util_get_process_capabilities_reply
+ags_midi_ci_util_put_message_report
+ags_midi_ci_util_get_message_report
 ags_midi_file_get_type
 ags_midi_file_error_quark
 ags_midi_file_open
