implemented process inquiry

--- a/libags_audio.sym.in
+++ b/libags_audio.sym.in
@@ -1550,6 +1550,10 @@ ags_midi_ci_util_put_process_capabilities_reply
 ags_midi_ci_util_get_process_capabilities_reply
 ags_midi_ci_util_put_message_report
 ags_midi_ci_util_get_message_report
+ags_midi_ci_util_put_message_report_reply
+ags_midi_ci_util_get_message_report_reply
+ags_midi_ci_util_put_end_of_message_report
+ags_midi_ci_util_get_end_of_message_report
 ags_midi_file_get_type
 ags_midi_file_error_quark
 ags_midi_file_open
