--- a/libags_audio.sym.in
+++ b/libags_audio.sym.in
@@ -1315,6 +1315,37 @@ ags_marker_get_y
 ags_marker_set_y
 ags_marker_duplicate
 ags_marker_new
+ags_midi_ump_util_get_type
+ags_midi_ump_util_alloc
+ags_midi_ump_util_free
+ags_midi_ump_util_copy
+ags_midi_ump_util_is_system_common
+ags_midi_ump_util_put_system_common
+ags_midi_ump_util_get_system_common
+ags_midi_ump_util_is_midi1_channel_voice
+ags_midi_ump_util_put_midi1_channel_voice
+ags_midi_ump_util_get_midi1_channel_voice
+ags_midi_ump_util_is_data_message_with_sysex
+ags_midi_ump_util_put_data_message_with_sysex
+ags_midi_ump_util_get_data_message_with_sysex
+ags_midi_ump_util_is_data_message
+ags_midi_ump_util_put_data_message
+ags_midi_ump_util_get_data_message
+ags_midi_ump_util_is_midi2_channel_voice
+ags_midi_ump_util_put_midi2_channel_voice
+ags_midi_ump_util_get_midi2_channel_voice
+ags_midi_ump_util_is_stream_message
+ags_midi_ump_util_put_stream_message
+ags_midi_ump_util_get_stream_message
+ags_midi_ump_util_is_endpoint_discovery
+ags_midi_ump_util_put_endpoint_discovery
+ags_midi_ump_util_get_endpoint_discovery
+ags_midi_ump_util_is_endpoint_info_notification
+ags_midi_ump_util_put_endpoint_info_notification
+ags_midi_ump_util_get_endpoint_info_notification
+ags_midi_ump_util_is_device_identity_notification
+ags_midi_ump_util_put_device_identity_notification
+ags_midi_ump_util_get_device_identity_notification
 ags_midi_ci_1_1_port_get_type
 ags_midi_ci_1_1_port_inquiry
 ags_midi_ci_1_1_port_respond
