--- a/ags/meson.build
+++ b/ags/meson.build
@@ -583,6 +583,7 @@ libags_audio_sources = files(
   'audio/midi/ags_midi_buffer_util.c',
   'audio/midi/ags_midi_builder.c',
   'audio/midi/ags_midi_ci_util.c',
+  'audio/midi/ags_midi_ump_util.c',
   'audio/midi/ags_midi_file.c',
   'audio/midi/ags_midi_parser.c',
   'audio/midi/ags_midi_util.c',
@@ -1781,6 +1782,8 @@ libags_audio_audio_jack_headers = [
 
 libags_audio_audio_midi_headers = [
   'audio/midi/ags_midi_buffer_util.h',
+  'audio/midi/ags_midi_ci_util.h',
+  'audio/midi/ags_midi_ump_util.h',
   'audio/midi/ags_midi_builder.h',
   'audio/midi/ags_midi_file.h',
   'audio/midi/ags_midi_parser.h',
