implemented ags_time_nanosleep()

--- a/libags_audio.sym.in
+++ b/libags_audio.sym.in
@@ -1346,6 +1346,9 @@ ags_midi_ump_util_get_endpoint_info_notification
 ags_midi_ump_util_is_device_identity_notification
 ags_midi_ump_util_put_device_identity_notification
 ags_midi_ump_util_get_device_identity_notification
+ags_midi_ump_util_is_endpoint_name_notification
+ags_midi_ump_util_put_endpoint_name_notification
+ags_midi_ump_util_get_endpoint_name_notification
 ags_midi_ci_1_1_port_get_type
 ags_midi_ci_1_1_port_inquiry
 ags_midi_ci_1_1_port_respond
