--- a/libags.sym.in
+++ b/libags.sym.in
@@ -181,11 +181,14 @@ ags_solver_matrix_get_source_function
 ags_solver_matrix_set_source_function
 ags_solver_matrix_get_row_count
 ags_solver_matrix_get_column_count
+ags_solver_matrix_to_string
+ags_solver_matrix_to_symbolic_string
 ags_solver_matrix_parse
 ags_solver_matrix_insert_vector
 ags_solver_matrix_remove_vector
 ags_solver_matrix_eliminate
 ags_solver_matrix_solve_default
+ags_solver_matrix_solve_symbolic
 ags_solver_matrix_new
 ags_function_get_type
 ags_function_add_matrix
@@ -215,6 +218,7 @@ ags_uuid_generate
 ags_uuid_compare
 ags_uuid_to_string
 ags_uuid_from_string
+ags_time_nanosleep
 ags_time_get_uptime_from_offset
 ags_time_timeout_expired
 ags_turtle_manager_get_type
