--- a/libags_audio.sym.in
+++ b/libags_audio.sym.in
@@ -1349,6 +1349,9 @@ ags_midi_ump_util_get_device_identity_notification
 ags_midi_ump_util_is_endpoint_name_notification
 ags_midi_ump_util_put_endpoint_name_notification
 ags_midi_ump_util_get_endpoint_name_notification
+ags_midi_ump_util_is_product_instance_id_notification
+ags_midi_ump_util_put_product_instance_id_notification
+ags_midi_ump_util_get_product_instance_id_notification
 ags_midi_ci_1_1_port_get_type
 ags_midi_ci_1_1_port_inquiry
 ags_midi_ci_1_1_port_respond
