--- a/docs/reference/libags-audio/libags_audio-sections.txt.in
+++ b/docs/reference/libags-audio/libags_audio-sections.txt.in
@@ -487,6 +487,7 @@ ags_audio_get_automation_port
 ags_audio_set_automation_port
 ags_audio_add_automation_port
 ags_audio_remove_automation_port
+ags_audio_remove_all_empty_automation
 ags_audio_get_automation
 ags_audio_set_automation
 ags_audio_add_automation
@@ -1189,6 +1190,7 @@ ags_automation_find_near_timestamp
 ags_automation_find_near_timestamp_extended
 ags_automation_sort_func
 ags_automation_add
+ags_automation_remove_all_empty
 ags_automation_get_audio
 ags_automation_set_audio
 ags_automation_get_channel_type
@@ -1197,6 +1199,8 @@ ags_automation_get_line
 ags_automation_set_line
 ags_automation_get_timestamp
 ags_automation_set_timestamp
+ags_automation_get_control_key
+ags_automation_set_control_key
 ags_automation_get_control_name
 ags_automation_set_control_name
 ags_automation_get_steps
@@ -1234,6 +1238,7 @@ ags_automation_get_specifier_unique_with_channel_type
 ags_automation_find_specifier
 ags_automation_find_channel_type_with_control_name
 ags_automation_find_specifier_with_type_and_line
+ags_automation_filter
 ags_automation_get_value
 ags_automation_new
 <SUBSECTION Standard>
@@ -1247,6 +1252,26 @@ AgsAutomation
 AgsAutomationClass
 ags_automation_flags_get_type
 ags_automation_get_type
+</SECTION>
+
+<SECTION>
+<FILE>ags_automation_control_name_key_manager</FILE>
+<TITLE>AgsAutomationControlNameKeyManager</TITLE>
+AGS_AUTOMATION_CONTROL_NAME_KEY_MANAGER_GET_OBJ_MUTEX
+ags_automation_control_name_key_manager_get_obj_mutex
+ags_automation_control_name_key_manager_find_automation
+ags_automation_control_name_key_manager_get_instance
+ags_automation_control_name_key_manager_new
+<SUBSECTION Standard>
+AGS_AUTOMATION_CONTROL_NAME_KEY_MANAGER
+AGS_AUTOMATION_CONTROL_NAME_KEY_MANAGER_CLASS
+AGS_AUTOMATION_CONTROL_NAME_KEY_MANAGER_GET_CLASS
+AGS_IS_AUTOMATION_CONTROL_NAME_KEY_MANAGER
+AGS_IS_AUTOMATION_CONTROL_NAME_KEY_MANAGER_CLASS
+AGS_TYPE_AUTOMATION_CONTROL_NAME_KEY_MANAGER
+AgsAutomationControlNameKeyManager
+AgsAutomationControlNameKeyManagerClass
+ags_automation_control_name_key_manager_get_type
 </SECTION>
 
 <SECTION>
@@ -1681,6 +1706,8 @@ ags_common_pitch_util_get_base_key
 ags_common_pitch_util_set_base_key
 ags_common_pitch_util_get_tuning
 ags_common_pitch_util_set_tuning
+ags_common_pitch_util_get_vibrato_enabled
+ags_common_pitch_util_set_vibrato_enabled
 ags_common_pitch_util_get_vibrato_gain
 ags_common_pitch_util_set_vibrato_gain
 ags_common_pitch_util_get_vibrato_lfo_depth
@@ -1689,6 +1716,8 @@ ags_common_pitch_util_get_vibrato_lfo_freq
 ags_common_pitch_util_set_vibrato_lfo_freq
 ags_common_pitch_util_get_vibrato_tuning
 ags_common_pitch_util_set_vibrato_tuning
+ags_common_pitch_util_get_vibrato_lfo_offset
+ags_common_pitch_util_set_vibrato_lfo_offset
 ags_common_pitch_util_pitch
 <SUBSECTION Standard>
 AgsCommonPitchUtil
@@ -1975,6 +2004,8 @@ ags_envelope_util_get_wah_wah_lfo_freq
 ags_envelope_util_set_wah_wah_lfo_freq
 ags_envelope_util_get_wah_wah_tuning
 ags_envelope_util_set_wah_wah_tuning
+ags_envelope_util_get_wah_wah_lfo_offset
+ags_envelope_util_set_wah_wah_lfo_offset
 ags_envelope_util_compute_s8
 ags_envelope_util_compute_s16
 ags_envelope_util_compute_s24
@@ -2054,6 +2085,8 @@ ags_fast_pitch_util_get_base_key
 ags_fast_pitch_util_set_base_key
 ags_fast_pitch_util_get_tuning
 ags_fast_pitch_util_set_tuning
+ags_fast_pitch_util_get_vibrato_enabled
+ags_fast_pitch_util_set_vibrato_enabled
 ags_fast_pitch_util_get_vibrato_gain
 ags_fast_pitch_util_set_vibrato_gain
 ags_fast_pitch_util_get_vibrato_lfo_depth
@@ -2062,6 +2095,8 @@ ags_fast_pitch_util_get_vibrato_lfo_freq
 ags_fast_pitch_util_set_vibrato_lfo_freq
 ags_fast_pitch_util_get_vibrato_tuning
 ags_fast_pitch_util_set_vibrato_tuning
+ags_fast_pitch_util_get_vibrato_lfo_offset
+ags_fast_pitch_util_set_vibrato_lfo_offset
 ags_fast_pitch_util_pitch_s8
 ags_fast_pitch_util_pitch_s16
 ags_fast_pitch_util_pitch_s24
@@ -2182,6 +2217,8 @@ ags_fluid_interpolate_4th_order_util_get_tuning
 ags_fluid_interpolate_4th_order_util_set_tuning
 ags_fluid_interpolate_4th_order_util_get_phase_increment
 ags_fluid_interpolate_4th_order_util_set_phase_increment
+ags_fluid_interpolate_4th_order_util_get_vibrato_enabled
+ags_fluid_interpolate_4th_order_util_set_vibrato_enabled
 ags_fluid_interpolate_4th_order_util_get_vibrato_gain
 ags_fluid_interpolate_4th_order_util_set_vibrato_gain
 ags_fluid_interpolate_4th_order_util_get_vibrato_lfo_depth
@@ -2190,6 +2227,8 @@ ags_fluid_interpolate_4th_order_util_get_vibrato_lfo_freq
 ags_fluid_interpolate_4th_order_util_set_vibrato_lfo_freq
 ags_fluid_interpolate_4th_order_util_get_vibrato_tuning
 ags_fluid_interpolate_4th_order_util_set_vibrato_tuning
+ags_fluid_interpolate_4th_order_util_get_vibrato_lfo_offset
+ags_fluid_interpolate_4th_order_util_set_vibrato_lfo_offset
 ags_fluid_interpolate_4th_order_util_pitch_s8
 ags_fluid_interpolate_4th_order_util_pitch_s16
 ags_fluid_interpolate_4th_order_util_pitch_s24
@@ -2231,6 +2270,8 @@ ags_fluid_interpolate_7th_order_util_get_tuning
 ags_fluid_interpolate_7th_order_util_set_tuning
 ags_fluid_interpolate_7th_order_util_get_phase_increment
 ags_fluid_interpolate_7th_order_util_set_phase_increment
+ags_fluid_interpolate_7th_order_util_get_vibrato_enabled
+ags_fluid_interpolate_7th_order_util_set_vibrato_enabled
 ags_fluid_interpolate_7th_order_util_get_vibrato_gain
 ags_fluid_interpolate_7th_order_util_set_vibrato_gain
 ags_fluid_interpolate_7th_order_util_get_vibrato_lfo_depth
@@ -2239,6 +2280,8 @@ ags_fluid_interpolate_7th_order_util_get_vibrato_lfo_freq
 ags_fluid_interpolate_7th_order_util_set_vibrato_lfo_freq
 ags_fluid_interpolate_7th_order_util_get_vibrato_tuning
 ags_fluid_interpolate_7th_order_util_set_vibrato_tuning
+ags_fluid_interpolate_7th_order_util_get_vibrato_lfo_offset
+ags_fluid_interpolate_7th_order_util_set_vibrato_lfo_offset
 ags_fluid_interpolate_7th_order_util_pitch_s8
 ags_fluid_interpolate_7th_order_util_pitch_s16
 ags_fluid_interpolate_7th_order_util_pitch_s24
@@ -2280,6 +2323,8 @@ ags_fluid_interpolate_linear_util_get_tuning
 ags_fluid_interpolate_linear_util_set_tuning
 ags_fluid_interpolate_linear_util_get_phase_increment
 ags_fluid_interpolate_linear_util_set_phase_increment
+ags_fluid_interpolate_linear_util_get_vibrato_enabled
+ags_fluid_interpolate_linear_util_set_vibrato_enabled
 ags_fluid_interpolate_linear_util_get_vibrato_gain
 ags_fluid_interpolate_linear_util_set_vibrato_gain
 ags_fluid_interpolate_linear_util_get_vibrato_lfo_depth
@@ -2288,6 +2333,8 @@ ags_fluid_interpolate_linear_util_get_vibrato_lfo_freq
 ags_fluid_interpolate_linear_util_set_vibrato_lfo_freq
 ags_fluid_interpolate_linear_util_get_vibrato_tuning
 ags_fluid_interpolate_linear_util_set_vibrato_tuning
+ags_fluid_interpolate_linear_util_get_vibrato_lfo_offset
+ags_fluid_interpolate_linear_util_set_vibrato_lfo_offset
 ags_fluid_interpolate_linear_util_pitch_s8
 ags_fluid_interpolate_linear_util_pitch_s16
 ags_fluid_interpolate_linear_util_pitch_s24
@@ -2329,6 +2376,8 @@ ags_fluid_interpolate_none_util_get_tuning
 ags_fluid_interpolate_none_util_set_tuning
 ags_fluid_interpolate_none_util_get_phase_increment
 ags_fluid_interpolate_none_util_set_phase_increment
+ags_fluid_interpolate_none_util_get_vibrato_enabled
+ags_fluid_interpolate_none_util_set_vibrato_enabled
 ags_fluid_interpolate_none_util_get_vibrato_gain
 ags_fluid_interpolate_none_util_set_vibrato_gain
 ags_fluid_interpolate_none_util_get_vibrato_lfo_depth
@@ -2337,6 +2386,8 @@ ags_fluid_interpolate_none_util_get_vibrato_lfo_freq
 ags_fluid_interpolate_none_util_set_vibrato_lfo_freq
 ags_fluid_interpolate_none_util_get_vibrato_tuning
 ags_fluid_interpolate_none_util_set_vibrato_tuning
+ags_fluid_interpolate_none_util_get_vibrato_lfo_offset
+ags_fluid_interpolate_none_util_set_vibrato_lfo_offset
 ags_fluid_interpolate_none_util_pitch_s8
 ags_fluid_interpolate_none_util_pitch_s16
 ags_fluid_interpolate_none_util_pitch_s24
@@ -5358,6 +5409,8 @@ ags_hq_pitch_util_get_base_key
 ags_hq_pitch_util_set_base_key
 ags_hq_pitch_util_get_tuning
 ags_hq_pitch_util_set_tuning
+ags_hq_pitch_util_get_vibrato_enabled
+ags_hq_pitch_util_set_vibrato_enabled
 ags_hq_pitch_util_get_vibrato_gain
 ags_hq_pitch_util_set_vibrato_gain
 ags_hq_pitch_util_get_vibrato_lfo_depth
@@ -5366,6 +5419,8 @@ ags_hq_pitch_util_get_vibrato_lfo_freq
 ags_hq_pitch_util_set_vibrato_lfo_freq
 ags_hq_pitch_util_get_vibrato_tuning
 ags_hq_pitch_util_set_vibrato_tuning
+ags_hq_pitch_util_get_vibrato_lfo_offset
+ags_hq_pitch_util_set_vibrato_lfo_offset
 ags_hq_pitch_util_pitch_s8
 ags_hq_pitch_util_pitch_s16
 ags_hq_pitch_util_pitch_s24
@@ -6529,23 +6584,95 @@ ags_midi_ci_1_1_port_get_type
 </SECTION>
 
 <SECTION>
-<FILE>ags_midi_ci_1_1_util</FILE>
-AGS_MIDI_CI_1_1_UTIL_BROADCAST_MUID
-AGS_MIDI_CI_1_1_UTIL_MAX_BROADCAST_MESSAGE_SIZE
-AGS_MIDI_CI_1_1_UTIL_DISCOVERY_TIMEOUT_USEC
+<FILE>ags_midi_ci_util</FILE>
+AGS_MIDI_CI_UTIL_BROADCAST_MUID
+AGS_MIDI_CI_UTIL_BROADCAST_MUID_ENCODED
+AGS_MIDI_CI_UTIL_MAX_BROADCAST_MESSAGE_SIZE
+AGS_MIDI_CI_UTIL_DISCOVERY_TIMEOUT_USEC
+AGS_MIDI_CI_UTIL_PROTOCOL_TYPE_MIDI_1_0
+AGS_MIDI_CI_UTIL_PROTOCOL_TYPE_MIDI_2_0
+AGS_MIDI_CI_UTIL_VERSION_MIDI_1_0
+AGS_MIDI_CI_UTIL_PROTOCOL_1_0_EXTENSIONS_SIZE_OF_PACKET
+AGS_MIDI_CI_UTIL_PROTOCOL_1_0_EXTENSIONS_JITTER_REDUCTION_TIMESTAMP
+AGS_MIDI_CI_UTIL_PROTOCOL_2_0_EXTENSIONS_JITTER_REDUCTION_TIMESTAMP
 AgsMUID
-AgsMidiCI_1_1_Util
-ags_midi_ci_1_1_util_alloc
-ags_midi_ci_1_1_util_free
-ags_midi_ci_1_1_util_copy
-ags_midi_ci_1_1_util_generate_muid
-ags_midi_ci_1_1_util_generate_put_discovery
-ags_midi_ci_1_1_util_generate_get_discovery
-ags_midi_ci_1_1_util_generate_put_discovery_reply
-ags_midi_ci_1_1_util_generate_get_discovery_reply
+AgsMidiCIAuthorityLevel
+AgsMidiCICategory
+AgsMidiCICategorySupport
+AgsMidiCIUtilStatusCode
+AgsMidiCIUtilProcessSupportedFeatures
+ags_midi_ci_util_alloc
+ags_midi_ci_util_free
+ags_midi_ci_util_copy
+ags_midi_ci_util_generate_muid
+ags_midi_ci_util_put_muid
+ags_midi_ci_util_get_muid
+ags_midi_ci_util_put_discovery
+ags_midi_ci_util_get_discovery
+ags_midi_ci_util_put_discovery_reply
+ags_midi_ci_util_get_discovery_reply
+ags_midi_ci_util_put_invalidate_muid
+ags_midi_ci_util_get_invalidate_muid
+ags_midi_ci_util_put_ack
+ags_midi_ci_util_get_ack
+ags_midi_ci_util_put_nak
+ags_midi_ci_util_get_nak
+ags_midi_ci_util_put_initiate_protocol_negotiation
+ags_midi_ci_util_get_initiate_protocol_negotiation
+ags_midi_ci_util_put_initiate_protocol_negotiation_reply
+ags_midi_ci_util_get_initiate_protocol_negotiation_reply
+ags_midi_ci_util_put_set_protocol_type
+ags_midi_ci_util_get_set_protocol_type
+ags_midi_ci_util_put_confirm_protocol_type
+ags_midi_ci_util_get_confirm_protocol_type
+ags_midi_ci_util_put_confirm_protocol_type_reply
+ags_midi_ci_util_get_confirm_protocol_type_reply
+ags_midi_ci_util_put_confirm_protocol_type_established
+ags_midi_ci_util_get_confirm_protocol_type_established
+ags_midi_ci_util_put_profile
+ags_midi_ci_util_get_profile
+ags_midi_ci_util_put_profile_reply
+ags_midi_ci_util_get_profile_reply
+ags_midi_ci_util_put_profile_enabled_report
+ags_midi_ci_util_get_profile_enabled_report
+ags_midi_ci_util_put_profile_disabled_report
+ags_midi_ci_util_get_profile_disabled_report
+ags_midi_ci_util_put_profile_added
+ags_midi_ci_util_get_profile_added
+ags_midi_ci_util_put_profile_removed
+ags_midi_ci_util_get_profile_removed
+ags_midi_ci_util_put_profile_specific_data
+ags_midi_ci_util_get_profile_specific_data
+ags_midi_ci_util_put_property_exchange_capabilities
+ags_midi_ci_util_get_property_exchange_capabilities
+ags_midi_ci_util_put_property_exchange_capabilities_reply
+ags_midi_ci_util_get_property_exchange_capabilities_reply
+ags_midi_ci_util_put_get_property_data
+ags_midi_ci_util_get_get_property_data
+ags_midi_ci_util_put_get_property_data_reply
+ags_midi_ci_util_get_get_property_data_reply
+ags_midi_ci_util_put_set_property_data
+ags_midi_ci_util_get_set_property_data
+ags_midi_ci_util_put_set_property_data_reply
+ags_midi_ci_util_get_set_property_data_reply
+ags_midi_ci_util_put_subscription
+ags_midi_ci_util_get_subscription
+ags_midi_ci_util_put_subscription_reply
+ags_midi_ci_util_get_subscription_reply
+ags_midi_ci_util_put_process_capabilities
+ags_midi_ci_util_get_process_capabilities
+ags_midi_ci_util_put_process_capabilities_reply
+ags_midi_ci_util_get_process_capabilities_reply
+ags_midi_ci_util_put_message_report
+ags_midi_ci_util_get_message_report
+ags_midi_ci_util_put_message_report_reply
+ags_midi_ci_util_get_message_report_reply
+ags_midi_ci_util_put_end_of_message_report
+ags_midi_ci_util_get_end_of_message_report
 <SUBSECTION Standard>
-AGS_TYPE_MIDI_CI_1_1_UTIL
-ags_midi_ci_1_1_util_get_type
+AGS_TYPE_MIDI_CI_UTIL
+AgsMidiCIUtil
+ags_midi_ci_util_get_type
 </SECTION>
 
 <SECTION>
@@ -6672,7 +6799,57 @@ ags_midi_parser_get_type
 </SECTION>
 
 <SECTION>
+<FILE>ags_midi_ump_util</FILE>
+AgsUmpWord
+AgsMidiUmpStreamMessageFormat
+AgsMidiUmpEndpointDiscoveryFilterBitmap
+ags_midi_ump_util_alloc
+ags_midi_ump_util_free
+ags_midi_ump_util_copy
+ags_midi_ump_util_is_system_common
+ags_midi_ump_util_put_system_common
+ags_midi_ump_util_get_system_common
+ags_midi_ump_util_is_midi1_channel_voice
+ags_midi_ump_util_put_midi1_channel_voice
+ags_midi_ump_util_get_midi1_channel_voice
+ags_midi_ump_util_is_data_message_with_sysex
+ags_midi_ump_util_put_data_message_with_sysex
+ags_midi_ump_util_get_data_message_with_sysex
+ags_midi_ump_util_is_data_message
+ags_midi_ump_util_put_data_message
+ags_midi_ump_util_get_data_message
+ags_midi_ump_util_is_midi2_channel_voice
+ags_midi_ump_util_put_midi2_channel_voice
+ags_midi_ump_util_get_midi2_channel_voice
+ags_midi_ump_util_is_stream_message
+ags_midi_ump_util_put_stream_message
+ags_midi_ump_util_get_stream_message
+ags_midi_ump_util_is_endpoint_discovery
+ags_midi_ump_util_put_endpoint_discovery
+ags_midi_ump_util_get_endpoint_discovery
+ags_midi_ump_util_is_endpoint_info_notification
+ags_midi_ump_util_put_endpoint_info_notification
+ags_midi_ump_util_get_endpoint_info_notification
+ags_midi_ump_util_is_device_identity_notification
+ags_midi_ump_util_put_device_identity_notification
+ags_midi_ump_util_get_device_identity_notification
+ags_midi_ump_util_is_endpoint_name_notification
+ags_midi_ump_util_put_endpoint_name_notification
+ags_midi_ump_util_get_endpoint_name_notification
+ags_midi_ump_util_is_product_instance_id_notification
+ags_midi_ump_util_put_product_instance_id_notification
+ags_midi_ump_util_get_product_instance_id_notification
+<SUBSECTION Standard>
+AGS_TYPE_MIDI_UMP_UTIL
+AgsMidiUmpUtil
+ags_midi_ump_util_get_type
+</SECTION>
+
+<SECTION>
 <FILE>ags_midi_util</FILE>
+ags_midi_util_alloc
+ags_midi_util_free
+ags_midi_util_copy
 ags_midi_util_is_key_on
 ags_midi_util_is_key_off
 ags_midi_util_is_key_pressure
@@ -7947,6 +8124,9 @@ ags_port_safe_get_property
 ags_port_safe_set_property
 ags_port_find_specifier
 ags_port_find_plugin_port
+ags_port_get_line
+ags_port_get_channel_type
+ags_port_get_automation
 ags_port_add_automation
 ags_port_remove_automation
 ags_port_new
@@ -8049,8 +8229,13 @@ ags_program_find_near_timestamp
 ags_program_find_near_timestamp_extended
 ags_program_sort_func
 ags_program_add
+ags_program_remove_all_empty
 ags_program_get_audio
 ags_program_set_audio
+ags_program_get_timestamp
+ags_program_set_timestamp
+ags_program_get_control_key
+ags_program_set_control_key
 ags_program_get_control_name
 ags_program_set_control_name
 ags_program_get_port
@@ -8078,6 +8263,7 @@ ags_program_insert_from_clipboard_extended
 ags_program_get_control_name_unique
 ags_program_find_control_name
 ags_program_get_value
+ags_program_filter
 ags_program_new
 <SUBSECTION Standard>
 AGS_IS_PROGRAM
@@ -8090,6 +8276,26 @@ AgsProgram
 AgsProgramClass
 ags_program_flags_get_type
 ags_program_get_type
+</SECTION>
+
+<SECTION>
+<FILE>ags_program_control_name_key_manager</FILE>
+<TITLE>AgsProgramControlNameKeyManager</TITLE>
+AGS_PROGRAM_CONTROL_NAME_KEY_MANAGER_GET_OBJ_MUTEX
+ags_program_control_name_key_manager_get_obj_mutex
+ags_program_control_name_key_manager_find_program
+ags_program_control_name_key_manager_get_instance
+ags_program_control_name_key_manager_new
+<SUBSECTION Standard>
+AGS_IS_PROGRAM_CONTROL_NAME_KEY_MANAGER
+AGS_IS_PROGRAM_CONTROL_NAME_KEY_MANAGER_CLASS
+AGS_PROGRAM_CONTROL_NAME_KEY_MANAGER
+AGS_PROGRAM_CONTROL_NAME_KEY_MANAGER_CLASS
+AGS_PROGRAM_CONTROL_NAME_KEY_MANAGER_GET_CLASS
+AGS_TYPE_PROGRAM_CONTROL_NAME_KEY_MANAGER
+AgsProgramControlNameKeyManager
+AgsProgramControlNameKeyManagerClass
+ags_program_control_name_key_manager_get_type
 </SECTION>
 
 <SECTION>
@@ -8718,6 +8924,7 @@ AGS_RESAMPLE_UTIL_DEFAULT_SAMPLERATE
 AGS_RESAMPLE_UTIL_DEFAULT_AUDIO_BUFFER_UTIL_FORMAT
 AGS_RESAMPLE_UTIL_DEFAULT_TARGET_SAMPLERATE
 ags_resample_util_alloc
+ags_resample_util_init
 ags_resample_util_copy
 ags_resample_util_free
 ags_resample_util_get_destination
@@ -8823,6 +9030,11 @@ AGS_TYPE_RESIZE_AUDIO
 AgsResizeAudio
 AgsResizeAudioClass
 ags_resize_audio_get_type
+</SECTION>
+
+<SECTION>
+<FILE>ags_samplerate_coeffs</FILE>
+
 </SECTION>
 
 <SECTION>
@@ -8947,6 +9159,22 @@ AGS_TYPE_SET_MUTED
 AgsSetMuted
 AgsSetMutedClass
 ags_set_muted_get_type
+</SECTION>
+
+<SECTION>
+<FILE>ags_set_presets</FILE>
+<TITLE>AgsSetPresets</TITLE>
+ags_set_presets_new
+<SUBSECTION Standard>
+AGS_IS_SET_PRESETS
+AGS_IS_SET_PRESETS_CLASS
+AGS_SET_PRESETS
+AGS_SET_PRESETS_CLASS
+AGS_SET_PRESETS_GET_CLASS
+AGS_TYPE_SET_PRESETS
+AgsSetPresets
+AgsSetPresetsClass
+ags_set_presets_get_type
 </SECTION>
 
 <SECTION>
@@ -9543,6 +9771,8 @@ ags_sound_provider_set_osc_server
 ags_sound_provider_get_osc_server
 ags_sound_provider_set_program
 ags_sound_provider_get_program
+ags_sound_provider_set_tempo
+ags_sound_provider_get_tempo
 <SUBSECTION Standard>
 AGS_IS_SOUND_PROVIDER
 AGS_IS_SOUND_PROVIDER_INTERFACE
@@ -9746,8 +9976,10 @@ ags_switch_buffer_flag_get_type
 <SECTION>
 <FILE>ags_synth_enums</FILE>
 AgsSynthOscillatorMode
+AgsSynthKeyMode
 <SUBSECTION Standard>
 AGS_TYPE_SYNTH_OSCILLATOR_MODE
+ags_synth_key_mode_get_type
 ags_synth_oscillator_mode_get_type
 </SECTION>
 
@@ -10053,6 +10285,8 @@ ags_tremolo_util_get_tremolo_lfo_freq
 ags_tremolo_util_set_tremolo_lfo_freq
 ags_tremolo_util_get_tremolo_tuning
 ags_tremolo_util_set_tremolo_tuning
+ags_tremolo_util_get_tremolo_lfo_offset
+ags_tremolo_util_set_tremolo_lfo_offset
 ags_tremolo_util_compute_s8
 ags_tremolo_util_compute_s16
 ags_tremolo_util_compute_s24
@@ -10207,6 +10441,53 @@ AgsW32Midiin
 AgsW32MidiinClass
 ags_w32_midiin_flags_get_type
 ags_w32_midiin_get_type
+</SECTION>
+
+<SECTION>
+<FILE>ags_wah_wah_util</FILE>
+AGS_WAH_WAH_UTIL_DEFAULT_FORMAT
+AGS_WAH_WAH_UTIL_DEFAULT_AUDIO_BUFFER_UTIL_FORMAT
+ags_wah_wah_util_alloc
+ags_wah_wah_util_copy
+ags_wah_wah_util_free
+ags_wah_wah_util_get_destination
+ags_wah_wah_util_set_destination
+ags_wah_wah_util_get_destination_stride
+ags_wah_wah_util_set_destination_stride
+ags_wah_wah_util_get_source
+ags_wah_wah_util_set_source
+ags_wah_wah_util_get_source_stride
+ags_wah_wah_util_set_source_stride
+ags_wah_wah_util_get_buffer_length
+ags_wah_wah_util_set_buffer_length
+ags_wah_wah_util_get_format
+ags_wah_wah_util_set_format
+ags_wah_wah_util_get_volume
+ags_wah_wah_util_set_volume
+ags_wah_wah_util_get_amount
+ags_wah_wah_util_set_amount
+ags_wah_wah_util_get_wah_wah_lfo_depth
+ags_wah_wah_util_set_wah_wah_lfo_depth
+ags_wah_wah_util_get_wah_wah_lfo_freq
+ags_wah_wah_util_set_wah_wah_lfo_freq
+ags_wah_wah_util_get_wah_wah_tuning
+ags_wah_wah_util_set_wah_wah_tuning
+ags_wah_wah_util_get_wah_wah_lfo_offset
+ags_wah_wah_util_set_wah_wah_lfo_offset
+ags_wah_wah_util_compute_s8
+ags_wah_wah_util_compute_s16
+ags_wah_wah_util_compute_s24
+ags_wah_wah_util_compute_s32
+ags_wah_wah_util_compute_s64
+ags_wah_wah_util_compute_float
+ags_wah_wah_util_compute_double
+ags_wah_wah_util_compute_complex
+ags_wah_wah_util_compute
+<SUBSECTION Standard>
+AGS_TYPE_WAH_WAH_UTIL
+AGS_WAH_WAH_UTIL
+AgsWahWahUtil
+ags_wah_wah_util_get_type
 </SECTION>
 
 <SECTION>
