--- a/docs/reference/libags-audio/libags_audio.interfaces.in
+++ b/docs/reference/libags-audio/libags_audio.interfaces.in
@@ -59,9 +59,10 @@ AgsFxNotationAudio AgsConnectable
 AgsFxDssiAudio AgsConnectable
 AgsFxFMSynthAudio AgsConnectable
 AgsFxLv2Audio AgsConnectable
-AgsFxSF2SynthAudio AgsConnectable
 AgsFxSFZSynthAudio AgsConnectable
 AgsFxSynthAudio AgsConnectable
+AgsFxSF2SynthAudio AgsConnectable
+AgsFxVst3Audio AgsConnectable
 AgsFxEnvelopeAudio AgsConnectable
 AgsFxEq10Audio AgsConnectable
 AgsFxHighPassAudio AgsConnectable
@@ -71,8 +72,10 @@ AgsFxLowPassAudio AgsConnectable
 AgsFxPatternAudio AgsConnectable
 AgsFxPeakAudio AgsConnectable
 AgsFxPlaybackAudio AgsConnectable
+AgsFxTremoloAudio AgsConnectable
 AgsFxTwoPassAliaseAudio AgsConnectable
 AgsFxVolumeAudio AgsConnectable AgsMutable
+AgsFxWahWahAudio AgsConnectable
 AgsRecallAudioRun AgsConnectable
 AgsFxAnalyseAudioProcessor AgsConnectable
 AgsFxBufferAudioProcessor AgsConnectable
@@ -80,9 +83,10 @@ AgsFxNotationAudioProcessor AgsConnectable AgsCountable AgsSeekable AgsTactable
 AgsFxDssiAudioProcessor AgsConnectable AgsCountable AgsSeekable AgsTactable
 AgsFxFMSynthAudioProcessor AgsConnectable AgsCountable AgsSeekable AgsTactable
 AgsFxLv2AudioProcessor AgsConnectable AgsCountable AgsSeekable AgsTactable
-AgsFxSF2SynthAudioProcessor AgsConnectable AgsCountable AgsSeekable AgsTactable
 AgsFxSFZSynthAudioProcessor AgsConnectable AgsCountable AgsSeekable AgsTactable
 AgsFxSynthAudioProcessor AgsConnectable AgsCountable AgsSeekable AgsTactable
+AgsFxSF2SynthAudioProcessor AgsConnectable AgsCountable AgsSeekable AgsTactable
+AgsFxVst3AudioProcessor AgsConnectable AgsCountable AgsSeekable AgsTactable
 AgsFxEnvelopeAudioProcessor AgsConnectable
 AgsFxEq10AudioProcessor AgsConnectable
 AgsFxHighPassAudioProcessor AgsConnectable
@@ -92,8 +96,10 @@ AgsFxLowPassAudioProcessor AgsConnectable
 AgsFxPatternAudioProcessor AgsConnectable AgsCountable AgsSeekable AgsTactable
 AgsFxPeakAudioProcessor AgsConnectable
 AgsFxPlaybackAudioProcessor AgsConnectable AgsCountable AgsSeekable AgsTactable
+AgsFxTremoloAudioProcessor AgsConnectable
 AgsFxTwoPassAliaseAudioProcessor AgsConnectable
 AgsFxVolumeAudioProcessor AgsConnectable
+AgsFxWahWahAudioProcessor AgsConnectable
 AgsRecallAudioSignal AgsConnectable
 AgsFxAnalyseAudioSignal AgsConnectable
 AgsFxBufferAudioSignal AgsConnectable
@@ -101,9 +107,10 @@ AgsFxNotationAudioSignal AgsConnectable
 AgsFxDssiAudioSignal AgsConnectable
 AgsFxFMSynthAudioSignal AgsConnectable
 AgsFxLv2AudioSignal AgsConnectable
-AgsFxSF2SynthAudioSignal AgsConnectable
 AgsFxSFZSynthAudioSignal AgsConnectable
 AgsFxSynthAudioSignal AgsConnectable
+AgsFxSF2SynthAudioSignal AgsConnectable
+AgsFxVst3AudioSignal AgsConnectable
 AgsFxEnvelopeAudioSignal AgsConnectable
 AgsFxEq10AudioSignal AgsConnectable
 AgsFxHighPassAudioSignal AgsConnectable
@@ -113,8 +120,10 @@ AgsFxLowPassAudioSignal AgsConnectable
 AgsFxPatternAudioSignal AgsConnectable
 AgsFxPeakAudioSignal AgsConnectable
 AgsFxPlaybackAudioSignal AgsConnectable
+AgsFxTremoloAudioSignal AgsConnectable
 AgsFxTwoPassAliaseAudioSignal AgsConnectable
 AgsFxVolumeAudioSignal AgsConnectable
+AgsFxWahWahAudioSignal AgsConnectable
 AgsRecallChannel AgsConnectable
 AgsFxAnalyseChannel AgsConnectable
 AgsFxBufferChannel AgsConnectable
@@ -122,9 +131,10 @@ AgsFxNotationChannel AgsConnectable
 AgsFxDssiChannel AgsConnectable
 AgsFxFMSynthChannel AgsConnectable
 AgsFxLv2Channel AgsConnectable
-AgsFxSF2SynthChannel AgsConnectable
 AgsFxSFZSynthChannel AgsConnectable
 AgsFxSynthChannel AgsConnectable
+AgsFxSF2SynthChannel AgsConnectable
+AgsFxVst3Channel AgsConnectable
 AgsFxEnvelopeChannel AgsConnectable
 AgsFxEq10Channel AgsConnectable
 AgsFxHighPassChannel AgsConnectable
@@ -134,8 +144,10 @@ AgsFxLowPassChannel AgsConnectable
 AgsFxPatternChannel AgsConnectable
 AgsFxPeakChannel AgsConnectable
 AgsFxPlaybackChannel AgsConnectable
+AgsFxTremoloChannel AgsConnectable
 AgsFxTwoPassAliaseChannel AgsConnectable
 AgsFxVolumeChannel AgsConnectable AgsMutable
+AgsFxWahWahChannel AgsConnectable
 AgsRecallChannelRun AgsConnectable
 AgsFxAnalyseChannelProcessor AgsConnectable
 AgsFxBufferChannelProcessor AgsConnectable
@@ -143,9 +155,10 @@ AgsFxNotationChannelProcessor AgsConnectable
 AgsFxDssiChannelProcessor AgsConnectable
 AgsFxFMSynthChannelProcessor AgsConnectable
 AgsFxLv2ChannelProcessor AgsConnectable
-AgsFxSF2SynthChannelProcessor AgsConnectable
 AgsFxSFZSynthChannelProcessor AgsConnectable
 AgsFxSynthChannelProcessor AgsConnectable
+AgsFxSF2SynthChannelProcessor AgsConnectable
+AgsFxVst3ChannelProcessor AgsConnectable
 AgsFxEnvelopeChannelProcessor AgsConnectable
 AgsFxEq10ChannelProcessor AgsConnectable
 AgsFxHighPassChannelProcessor AgsConnectable
@@ -155,8 +168,10 @@ AgsFxLowPassChannelProcessor AgsConnectable
 AgsFxPatternChannelProcessor AgsConnectable
 AgsFxPeakChannelProcessor AgsConnectable
 AgsFxPlaybackChannelProcessor AgsConnectable
+AgsFxTremoloChannelProcessor AgsConnectable
 AgsFxTwoPassAliaseChannelProcessor AgsConnectable
 AgsFxVolumeChannelProcessor AgsConnectable
+AgsFxWahWahChannelProcessor AgsConnectable
 AgsGenericRecallChannelRun AgsConnectable
 AgsRecallRecycling AgsConnectable
 AgsFxAnalyseRecycling AgsConnectable
@@ -165,9 +180,10 @@ AgsFxNotationRecycling AgsConnectable
 AgsFxDssiRecycling AgsConnectable
 AgsFxFMSynthRecycling AgsConnectable
 AgsFxLv2Recycling AgsConnectable
-AgsFxSF2SynthRecycling AgsConnectable
 AgsFxSFZSynthRecycling AgsConnectable
 AgsFxSynthRecycling AgsConnectable
+AgsFxSF2SynthRecycling AgsConnectable
+AgsFxVst3Recycling AgsConnectable
 AgsFxEnvelopeRecycling AgsConnectable
 AgsFxEq10Recycling AgsConnectable
 AgsFxHighPassRecycling AgsConnectable
@@ -177,8 +193,10 @@ AgsFxLowPassRecycling AgsConnectable
 AgsFxPatternRecycling AgsConnectable
 AgsFxPeakRecycling AgsConnectable
 AgsFxPlaybackRecycling AgsConnectable
+AgsFxTremoloRecycling AgsConnectable
 AgsFxTwoPassAliaseRecycling AgsConnectable
 AgsFxVolumeRecycling AgsConnectable
+AgsFxWahWahRecycling AgsConnectable
 AgsGenericRecallRecycling AgsConnectable
 AgsGstreamerClient AgsConnectable
 AgsGstreamerDevin AgsConnectable AgsSoundcard
@@ -186,11 +204,6 @@ AgsGstreamerDevout AgsConnectable AgsSoundcard
 AgsGstreamerFile AgsConnectable AgsSoundResource
 AgsGstreamerPort AgsConnectable
 AgsGstreamerServer AgsConnectable AgsSoundServer
-AgsIpatchDLS2Reader AgsConnectable
-AgsIpatch AgsConnectable AgsSoundContainer
-AgsIpatchGigReader AgsConnectable
-AgsIpatchSample AgsConnectable AgsSoundResource
-AgsIpatchSF2Reader AgsConnectable
 AgsJackClient AgsConnectable
 AgsJackDevin AgsConnectable AgsSoundcard
 AgsJackDevout AgsConnectable AgsSoundcard
@@ -218,4 +231,9 @@ AgsSFZSample AgsConnectable AgsSoundResource
 AgsSndfile AgsConnectable AgsSoundResource
 AgsWasapiDevin AgsConnectable AgsSoundcard
 AgsWasapiDevout AgsConnectable AgsSoundcard
+AgsIpatchDLS2Reader AgsConnectable
+AgsIpatch AgsConnectable AgsSoundContainer
+AgsIpatchGigReader AgsConnectable
+AgsIpatchSample AgsConnectable AgsSoundResource
+AgsIpatchSF2Reader AgsConnectable
 AgsTaskLauncher AgsConnectable
