--- a/docs/reference/libgsequencer/libgsequencer.interfaces.in
+++ b/docs/reference/libgsequencer/libgsequencer.interfaces.in
@@ -79,8 +79,8 @@ AgsMixerInputPad GtkAccessible GtkBuildable GtkConstraintTarget GtkOrientable Ag
 AgsPanelInputPad GtkAccessible GtkBuildable GtkConstraintTarget GtkOrientable AgsConnectable
 AgsSynthInputPad GtkAccessible GtkBuildable GtkConstraintTarget GtkOrientable AgsConnectable
 AgsEffectBulk GtkAccessible GtkBuildable GtkConstraintTarget GtkOrientable AgsConnectable
-AgsFFPlayerBulkInput GtkAccessible GtkBuildable GtkConstraintTarget GtkOrientable AgsConnectable
 AgsMatrixBulkInput GtkAccessible GtkBuildable GtkConstraintTarget GtkOrientable AgsConnectable
+AgsFFPlayerBulkInput GtkAccessible GtkBuildable GtkConstraintTarget GtkOrientable AgsConnectable
 AgsEffectLine GtkAccessible GtkBuildable GtkConstraintTarget GtkOrientable AgsConnectable
 AgsFFPlayerInputLine GtkAccessible GtkBuildable GtkConstraintTarget GtkOrientable AgsConnectable
 AgsEffectPad GtkAccessible GtkBuildable GtkConstraintTarget GtkOrientable AgsConnectable
@@ -116,6 +116,7 @@ AgsSoundcardEditor GtkAccessible GtkBuildable GtkConstraintTarget GtkOrientable 
 AgsTrackCollection GtkAccessible GtkBuildable GtkConstraintTarget GtkOrientable AgsConnectable AgsApplicable
 AgsWaveEditBox GtkAccessible GtkBuildable GtkConstraintTarget GtkOrientable
 AgsWaveMeta GtkAccessible GtkBuildable GtkConstraintTarget GtkOrientable AgsConnectable
+AgsVst3Browser GtkAccessible GtkBuildable GtkConstraintTarget GtkOrientable AgsConnectable AgsApplicable
 GtkGrid GtkAccessible GtkBuildable GtkConstraintTarget GtkOrientable
 AgsMachine GtkAccessible GtkBuildable GtkConstraintTarget GtkOrientable AgsConnectable
 AgsAudiorec GtkAccessible GtkBuildable GtkConstraintTarget GtkOrientable AgsConnectable
@@ -123,7 +124,6 @@ AgsDesk GtkAccessible GtkBuildable GtkConstraintTarget GtkOrientable AgsConnecta
 AgsDrum GtkAccessible GtkBuildable GtkConstraintTarget GtkOrientable AgsConnectable
 AgsDssiBridge GtkAccessible GtkBuildable GtkConstraintTarget GtkOrientable AgsConnectable
 AgsEqualizer10 GtkAccessible GtkBuildable GtkConstraintTarget GtkOrientable AgsConnectable
-AgsFFPlayer GtkAccessible GtkBuildable GtkConstraintTarget GtkOrientable AgsConnectable
 AgsFMSyncsynth GtkAccessible GtkBuildable GtkConstraintTarget GtkOrientable AgsConnectable
 AgsFMSynth GtkAccessible GtkBuildable GtkConstraintTarget GtkOrientable AgsConnectable
 AgsHybridFMSynth GtkAccessible GtkBuildable GtkConstraintTarget GtkOrientable AgsConnectable
@@ -136,18 +136,21 @@ AgsMatrix GtkAccessible GtkBuildable GtkConstraintTarget GtkOrientable AgsConnec
 AgsMixer GtkAccessible GtkBuildable GtkConstraintTarget GtkOrientable AgsConnectable
 AgsPanel GtkAccessible GtkBuildable GtkConstraintTarget GtkOrientable AgsConnectable
 AgsPitchSampler GtkAccessible GtkBuildable GtkConstraintTarget GtkOrientable AgsConnectable
-AgsSF2Synth GtkAccessible GtkBuildable GtkConstraintTarget GtkOrientable AgsConnectable
 AgsSFZSynth GtkAccessible GtkBuildable GtkConstraintTarget GtkOrientable AgsConnectable
 AgsSpectrometer GtkAccessible GtkBuildable GtkConstraintTarget GtkOrientable AgsConnectable
 AgsSyncsynth GtkAccessible GtkBuildable GtkConstraintTarget GtkOrientable AgsConnectable
 AgsSynth GtkAccessible GtkBuildable GtkConstraintTarget GtkOrientable AgsConnectable
+AgsSF2Synth GtkAccessible GtkBuildable GtkConstraintTarget GtkOrientable AgsConnectable
+AgsFFPlayer GtkAccessible GtkBuildable GtkConstraintTarget GtkOrientable AgsConnectable
+AgsLiveVst3Bridge GtkAccessible GtkBuildable GtkConstraintTarget GtkOrientable AgsConnectable
+AgsVst3Bridge GtkAccessible GtkBuildable GtkConstraintTarget GtkOrientable AgsConnectable
 AgsAutomationEdit GtkAccessible GtkBuildable GtkConstraintTarget GtkOrientable AgsConnectable
 AgsCellPattern GtkAccessible GtkBuildable GtkConstraintTarget GtkOrientable AgsConnectable
 AgsConnectionEditor GtkAccessible GtkBuildable GtkConstraintTarget GtkOrientable AgsConnectable AgsApplicable
 AgsDeskFileChooser GtkAccessible GtkBuildable GtkConstraintTarget GtkOrientable
 AgsEffectBridge GtkAccessible GtkBuildable GtkConstraintTarget GtkOrientable AgsConnectable
-AgsFFPlayerBridge GtkAccessible GtkBuildable GtkConstraintTarget GtkOrientable AgsConnectable
 AgsMatrixBridge GtkAccessible GtkBuildable GtkConstraintTarget GtkOrientable AgsConnectable
+AgsFFPlayerBridge GtkAccessible GtkBuildable GtkConstraintTarget GtkOrientable AgsConnectable
 AgsEffectBulkEntry GtkAccessible GtkBuildable GtkConstraintTarget GtkOrientable
 AgsMachineEditor GtkAccessible GtkBuildable GtkConstraintTarget GtkOrientable AgsConnectable AgsApplicable
 AgsMachineMapper GtkAccessible GtkBuildable GtkConstraintTarget GtkOrientable AgsConnectable AgsApplicable
