implementing MIDI UMP support

--- a/libags_audio.sym.in
+++ b/libags_audio.sym.in
@@ -472,6 +472,7 @@ ags_phase_shift_util_process_float
 ags_phase_shift_util_process_double
 ags_phase_shift_util_process_complex
 ags_phase_shift_util_process
+ags_samplerate_process_resample_util
 ags_acceleration_get_type
 ags_acceleration_flags_get_type
 ags_acceleration_get_obj_mutex
@@ -1352,6 +1353,9 @@ ags_midi_ump_util_get_endpoint_name_notification
 ags_midi_ump_util_is_product_instance_id_notification
 ags_midi_ump_util_put_product_instance_id_notification
 ags_midi_ump_util_get_product_instance_id_notification
+ags_midi_ump_util_is_stream_configuration_notification
+ags_midi_ump_util_put_stream_configuration_notification
+ags_midi_ump_util_get_stream_configuration_notification
 ags_midi_ci_1_1_port_get_type
 ags_midi_ci_1_1_port_inquiry
 ags_midi_ci_1_1_port_respond
